add DTO, update service